ZOE-606 Fix text alignment on illness report

--- a/modules/dxp/apps/watson/watson-theme/src/css/_forms.scss
+++ b/modules/dxp/apps/watson/watson-theme/src/css/_forms.scss
@@ -404,6 +404,10 @@
 			align-items: flex-start;
 		}
 
+		&.pushDown {
+			margin-top: 5%;
+		}
+
 		.input-label {
 			@include input-label;
 
